# client-server-linux-tcp

./: README.md
client/: CMakeLists.txt  client.c
erproc/: erproc.c
msg/: send.c  send.h
server/: CMakeLists.txt  server.c
